Minor cleanup of TODOs, explicit public modifiers, clean unnused CSS directive

--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -1,7 +1,7 @@
 <br/>
 <div class="row paddedRow">
     <div class="col-lg-12">
-        <h4>Manage custom assets to be used on the Exchanges.</h4>
+        <h4>Manage shortlist of assets to be used on the Exchanges.</h4>
     </div>
 </div>
 
