--- a/src/app/trade-history/trade-history.component.html
+++ b/src/app/trade-history/trade-history.component.html
@@ -20,12 +20,13 @@
         <ng-template #tradeItems>
             <tr *ngFor="let trade of recentTrades"
                 [class.lastInDay]="trade.isLastOfDay"
+                [class.poolTrade]="trade.isPoolTrade"
                 title="date: {{trade.time | date:'d MMM'}}
-seller: {{trade.sellingAccount.substring(0, 8)}}...{{trade.sellingAccount.substring(48)}}
-buyer: {{trade.buyingAccount.substring(0, 8)}}...{{trade.buyingAccount.substring(48)}}">
-            <td>{{trade.time | date:'HH:mm:ss'}}</td> 
-            <td class="{{trade.tradeType}}">{{Utils.formatPrice(trade.price)}}</td>         
-            <td>{{Utils.formatAmount(trade.amount)}}</td>
+seller: {{trade.seller}}
+buyer: {{trade.buyer}}">
+                <td>{{trade.time | date:'HH:mm:ss'}}</td> 
+                <td class="{{trade.tradeType}}">{{Utils.formatPrice(trade.price)}}</td>         
+                <td>{{Utils.formatAmount(trade.amount)}}</td>
             </tr>
         </ng-template>
     </tbody>
