--- a/src/app/custom-exchange/custom-exchange.component.html
+++ b/src/app/custom-exchange/custom-exchange.component.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div id="customExchangeChart{{exchange.id}}" class="exchange-link-chart">
-            <app-exchange-thumbnail [exchange]="exchange" [showAssetNames]="false"></app-exchange-thumbnail>
+            <nebular-exchange-thumbnail [exchange]="exchange" [showAssetNames]="false"></nebular-exchange-thumbnail>
         </div>
     </div>
 </div>
