--- a/src/app/my-exchanges/my-exchanges.component.html
+++ b/src/app/my-exchanges/my-exchanges.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="this.nebularService.CookieAgreement" class="row exchanges-frame">
     <ng-container *ngFor="let exch of exchanges">
-        <app-custom-exchange [exchange]="exch"></app-custom-exchange>
+        <nebular-custom-exchange [exchange]="exch"></nebular-custom-exchange>
     </ng-container>
     
     <div *ngIf="!this.uiService.DraggingExchange" id="addCustomExchange" class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
@@ -15,4 +15,4 @@
     &nbsp;
 </div>
 
-<app-cookie-consent *ngIf="!this.nebularService.CookieAgreement"></app-cookie-consent>
+<nebular-cookie-consent *ngIf="!this.nebularService.CookieAgreement"></nebular-cookie-consent>
