--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -7,6 +7,6 @@
 
 <div class="row exchanges-frame">
   <div *ngFor="let exchange of exchangeList" class="col-xl-3 col-lg-4 col-md-6 col-sm-12">
-    <app-exchange-thumbnail [exchange]="exchange"></app-exchange-thumbnail>
+    <nebular-exchange-thumbnail [exchange]="exchange"></nebular-exchange-thumbnail>
   </div>
 </div>
