--- a/src/app/orderbook/orderbook.component.html
+++ b/src/app/orderbook/orderbook.component.html
@@ -9,9 +9,9 @@
         <ng-container *ngIf="this.orderbook.asks.length === 0; else askRows">
             <tr></tr>
             <tr>
-                <td *ngIf="this.dataStatus == DataStatus.OK;">Loading data...</td>
-                <td colspan="2" class="error" *ngIf="this.dataStatus == DataStatus.Error;">{{this.message}}</td>
-                <td colspan="2" class="noOrders" *ngIf="this.dataStatus == DataStatus.NoData;">(no asks in this market)</td>
+                <td *ngIf="this.dataStatus === DataStatus.OK;">Loading data...</td>
+                <td colspan="2" class="error" *ngIf="this.dataStatus === DataStatus.Error;">{{this.message}}</td>
+                <td colspan="2" class="noOrders" *ngIf="this.dataStatus === DataStatus.NoData;">(no asks in this market)</td>
             </tr>
         </ng-container>
         <ng-template #askRows>
@@ -34,9 +34,9 @@ Date: {{lastTradeTime | date:'d MMM'}}">{{Utils.formatPrice(lastPrice)}}</span>
         <ng-container *ngIf="this.orderbook.bids.length === 0; else bidRows">
             <tr></tr>
             <tr>
-                <td *ngIf="this.dataStatus == DataStatus.OK;">Loading data...</td>
-                <td colspan="2" class="error" *ngIf="this.dataStatus == DataStatus.Error;">{{this.message}}</td>
-                <td colspan="2" class="noOrders" *ngIf="this.dataStatus == DataStatus.NoData;">(no bids in this market)</td>
+                <td *ngIf="this.dataStatus === DataStatus.OK;">Loading data...</td>
+                <td colspan="2" class="error" *ngIf="this.dataStatus === DataStatus.Error;">{{this.message}}</td>
+                <td colspan="2" class="noOrders" *ngIf="this.dataStatus === DataStatus.NoData;">(no bids in this market)</td>
             </tr>
         </ng-container>
         <ng-template #bidRows>
