--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -12,7 +12,7 @@
         </nebular-custom-asset-wizard>
     </div>
     <div class="col-lg-6 col-md-6 col-sm-12">
-        <nebular-custom-assets #customAssets></nebular-custom-assets>
+        <nebular-custom-asset-list #customAssets></nebular-custom-asset-list>
     </div>
 </div>
 
