--- a/src/app/exchange/exchange.component.css
+++ b/src/app/exchange/exchange.component.css
@@ -16,12 +16,6 @@
     border-bottom: 1px solid #5B6A72;
 }
 
-.dropdownsWrapper {
-    width:355px;
-    height: 45px;
-    float: left;
-}
-
 #swapAssetsLink {
     cursor: pointer;
 }
@@ -65,6 +59,9 @@ div.chartWarning {
 }
 
 .selectedAsset {
+    font-family: consolas,"Liberation Mono",courier,monospace;
+    font-weight: bold;
+    color: black;
     height: 38px;
     line-height: 38px;
     padding-left: 40px;
@@ -73,14 +70,10 @@ div.chartWarning {
     background-size: 32px 32px;
 }
 
-
-/** Material drop-downs */
-mat-form-field {
+.dropdownsWrapper {
+    width:355px;
+    height: 40px;
+    float: left;
+    background-color: white;
     border: 1px solid #ccc;
-}
-
-.mat-option {
-    border-bottom: 1px solid #ddd;
-    font-size: .92rem !important;
-    font-family: consolas,"Liberation Mono",courier,monospace;
 }
